--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "types": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "browserify": "browserify ./index.js -o ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/IIIF-Commons/vocabulary/issues"
   },
-  "homepage": "https://github.com/IIIF-Commons/vocabulary#readme"
+  "homepage": "https://github.com/IIIF-Commons/vocabulary#readme",
+  "devDependencies": {
+    "browserify": "^16.2.2",
+    "typescript": "^2.9.2"
+  }
 }
