--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,12 @@
 			"es6"
 		],
 		"declaration": true,
+		"declarationDir": "./dist",
 		"moduleResolution": "node",
 		"module": "commonjs",
 		"target": "es6",
         "noUnusedLocals": false,
         "types": [
-            "manifesto.js",
-            "node",
-            "three"
         ]
 	},
 	"include": [
