--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vocabulary",
+  "name": "@iiif/vocabulary",
   "version": "0.0.0",
   "description": "IIIF Vocabulary",
   "main": "./dist/index.js",
