--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "@iiif/vocabulary",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "IIIF Vocabulary",
-  "main": "./dist-commonjs/index.js",
-  "types": "./dist-commonjs/index.d.ts",
+  "main": "./dist-esmodule/index.js",
+  "types": "./types/index.d.ts",
   "scripts": {
-    "clean": "npx rimraf dist-umd dist-commonjs dist-esmodule",
-    "build": "npm run clean && tsc && tsc -m es6 --outDir dist-esmodule && webpack",
+    "clean": "rimraf -rf dist-umd dist-commonjs dist-esmodule dist-var types",
+    "build:commonjs": "tsc",
+    "build:esmodule": "tsc -m es6 --outDir dist-esmodule",
+    "build:umd": "webpack",
+    "build:var": "cross-env NODE_WEBPACK_LIBRARY_PATH=dist-var NODE_WEBPACK_LIBRARY_TARGET=var webpack",
+    "build:types": "npx dts-bundle-generator --umd-module-name vocabulary -o types/index.d.ts dist-esmodule/index.d.ts",
+    "build:docs": "rimraf -rf docs && typedoc --out docs --name vocabulary --theme default --ignoreCompilerErrors --experimentalDecorators --emitDecoratorMetadata --target ES6 --moduleResolution node --preserveConstEnums --stripInternal --suppressExcessPropertyErrors --suppressImplicitAnyIndexErrors --module commonjs src/ && touch docs/.nojekyll",
+    "build": "npm run clean && npm run build:commonjs && npm run build:esmodule && npm run build:umd && npm run build:var && npm run build:types",
     "prepare": "npm run build"
   },
   "repository": {
@@ -21,6 +27,7 @@
   "homepage": "https://github.com/IIIF-Commons/vocabulary#readme",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "cross-env": "^5.2.0",
     "rimraf": "^2.6.2",
     "typescript": "^3.1.3",
     "webpack": "^4.28.3",
