--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "declaration": true,
         "forceConsistentCasingInFileNames": true,
         "jsx": "react",
-        "lib": [ "es2015", "dom" ],
+        "lib": [ "es2015", "dom", "es2017" ],
         "module": "commonjs",
         "moduleResolution": "node",
         "noImplicitAny": false,
