--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "./types/index.d.ts",
   "scripts": {
     "build:commonjs": "tsc",
-    "build:docs": "rimraf -rf docs && typedoc --out docs --name vocabulary --theme default --ignoreCompilerErrors --experimentalDecorators --emitDecoratorMetadata --target ES6 --moduleResolution node --preserveConstEnums --stripInternal --suppressExcessPropertyErrors --suppressImplicitAnyIndexErrors --module commonjs src/ && touch docs/.nojekyll",
+    "build:docs": "rimraf -rf docs && typedoc --out docs --name vocabulary --theme default --ignoreCompilerErrors --experimentalDecorators --emitDecoratorMetadata --target ES6 --moduleResolution node --preserveConstEnums --stripInternal --suppressExcessPropertyErrors --module commonjs src/ && touch docs/.nojekyll",
     "build:esmodule": "tsc -m es6 --outDir dist-esmodule",
     "build:types": "npx dts-bundle-generator --umd-module-name vocabulary -o types/index.d.ts dist-esmodule/index.d.ts",
     "build:umd": "webpack",
